--- a/app/Components/BudgetDashboard/BudgetDashboard.module.css
+++ b/app/Components/BudgetDashboard/BudgetDashboard.module.css
@@ -1,4 +1,5 @@
 .page {
+  padding: 0px 80px 80px;
   display: grid;
   grid-template-rows: 0.5fr 0.5fr 2fr;
   align-items: center;
@@ -27,6 +28,10 @@
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   align-items: center;
   justify-items: center;
+}
+
+.add-transaction__section {
+  margin-top: 25px;
 }
 
 .information__graph {
