--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,16 @@
   --gray-text: #6b726c;
   --primary: #47bb5a;
   --secondary: #9cdfa7;
+
+  --accent-light: #ae76f2;
   --accent: #944deb;
+  --accent-dark: #7431c7;
+
+  --title-text: 64px;
+  --sub-title-text: 40px;
+  --lead-text: 18px;
+  --section-title: 20px;
+  --paragraph-text: 16px;
 }
 
 html {
@@ -13,7 +22,6 @@ html {
 }
 
 body {
-  padding: 80px;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -31,7 +39,7 @@ h2, h3, h4, h5 {
 body {
   color: var(--text);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: var(--paragraph-text);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
