--- a/app/Components/BudgetDashboard/BudgetDashboard.module.css
+++ b/app/Components/BudgetDashboard/BudgetDashboard.module.css
@@ -62,7 +62,6 @@
   width: 100%;
 }
 
-
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   a.primary:hover {
@@ -83,15 +82,45 @@
 
 @media (max-width: 600px) {
   .page {
-    padding: 32px;
-    padding-bottom: 80px;
+    padding: 16px;
+    grid-template-rows: auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .total-spent__section,
+  .add-transaction__section {
+    width: 100%;
+    margin: 15px 0 15px 0;
+  }
+
+  .information__section {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 100%;
+  }
+
+  .information__graph,
+  .information__table {
+    width: 100%;
+    margin: 0;
+    padding: 16px;
+  }
+
+  .information__graph h2,
+  .information__table h2 {
+    font-size: 1.1rem;
+  }
+
+  .add-transaction__section {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
   }
 
   .main {
     align-items: center;
-  }
-
-  .main {
     text-align: center;
   }
 }
