--- a/app/Components/DatePicker/DatePicker.module.css
+++ b/app/Components/DatePicker/DatePicker.module.css
@@ -1,3 +1,39 @@
+.date-picker {
+    width: 32%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .change-date-arrows:hover {
     cursor: pointer;
+}
+
+.displayed-date {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+
+.left-arrow {
+    display: flex;
+    align-items: center;
+}
+
+.right-arrow {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 600px) {
+    .date-picker {
+        width: 50%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .displayed-date {
+        text-align: center;
+        width: 50%;
+        font-size: 24px;
+    }
 }
