--- a/app/Components/TotalSpent/TotalSpent.module.css
+++ b/app/Components/TotalSpent/TotalSpent.module.css
@@ -5,3 +5,12 @@
 .total {
     color: var(--accent);
 }
+
+@media (max-width: 600px) {
+    .spent-this-month {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
