fix table pagination

--- a/app/Components/TransactionVanillaVanilla.tsx/TransactionTableVanilla.module.css
+++ b/app/Components/TransactionVanillaVanilla.tsx/TransactionTableVanilla.module.css
@@ -12,7 +12,7 @@
 }
 
 .change-date-arrows.disabled {
-    color: lightslategray;
+    visibility: hidden;
 }
 
 .change-date-arrows.disabled:hover {
