--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,13 @@
 :root {
-  --background: #e2f0e4;
-  --text: #031c08;
+  --background: #f4fbf6;
+  --text: #030a05;
   --gray-text: #6b726c;
-  --primary: #47bb5a;
-  --secondary: #9cdfa7;
+  --primary: #4cc36b;
+  --secondary: #a2caae;
 
-  --accent-light: #ae76f2;
-  --accent: #944deb;
-  --accent-dark: #7431c7;
+  --accent-light: #95d2c1;
+  --accent: #6480d0;
+  --accent-dark: #548376;
 
   --title-text: 64px;
   --sub-title-text: 40px;
