--- a/app/Components/Navbar/Navbar.module.css
+++ b/app/Components/Navbar/Navbar.module.css
@@ -26,6 +26,8 @@
 
 .navbar__menu_section_element {
     transition: text-decoration 0.75s ease-in;
+    text-align: center;
+    align-self: center;
     text-decoration: underline 0.15em rgba(0, 0, 0, 0);;
 }
 
