--- a/app/Components/TransactionWidget/TransactionWidget.module.css
+++ b/app/Components/TransactionWidget/TransactionWidget.module.css
@@ -6,6 +6,7 @@
     padding: 15px 10px 15px 10px;
     border-radius: 15px;
     margin-bottom: 10px;
+    box-shadow: 0px 5px 13px 1px rgba(0,0,0,0.12);
 }
 
 .transaction-amount {
@@ -22,5 +23,5 @@
 }
 
 .class-icon {
-    color: var(--secondary);
+    color: var(--accent);
 }
