--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap');
+
 :root {
   --background: #f4fbf6;
   --text: #030a05;
@@ -28,8 +30,10 @@ html {
 }
 
 body {
+  font-family: "Geist Mono", monospace;
   max-width: 100vw;
   overflow-x: hidden;
+  padding-bottom: 60px;
 }
 
 h1 {
