--- a/app/Components/AddTransactionWidget/AddTransactionWidget.module.css
+++ b/app/Components/AddTransactionWidget/AddTransactionWidget.module.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 16px;
 }
 
 .icon__section {
@@ -32,6 +33,7 @@
     flex-direction: column;
     justify-content: left;
     width: 75%;
+    margin-left: 25%;
 }
 
 .amount-category-input__section {
