--- a/app/Components/TotalSpentWidget/TotalSpentWidget.module.css
+++ b/app/Components/TotalSpentWidget/TotalSpentWidget.module.css
@@ -1,7 +1,7 @@
 .widget {
   background-color: #fff;
   border-radius: 20px;
-  box-shadow:  0px 20px 22px -20px rgba(0,0,0,0.20);
+  box-shadow: 0px 20px 22px -20px rgba(0, 0, 0, 0.2);
   width: 45%;
   height: 120px;
   display: flex;
@@ -11,33 +11,33 @@
 }
 
 .spent-this-month {
-    color: var(--text);
-    font-size: var(--mobile-14);
-    font-weight: 500;
+  color: var(--text);
+  font-size: var(--mobile-14);
+  font-weight: 500;
 }
 
 .total {
-    font-size: var(--mobile-16);
-    font-weight: 600;
+  font-size: var(--mobile-16);
+  font-weight: 600;
 }
 
 .total.income-widget {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .total.expense-widget {
-    color: crimson;
+  color: crimson;
 }
 
 .transaction-count {
-    color: var(--gray-text);
-    font-size: var(--mobile-12);
+  color: var(--gray-text);
+  font-size: var(--mobile-12);
 }
 
 @media (max-width: 600px) {
-    .spent-this-month {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .spent-this-month {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
