--- a/app/Components/Button/Button.module.css
+++ b/app/Components/Button/Button.module.css
@@ -1,46 +1,46 @@
 .button-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .button.medium {
-    width: 200px;
-    height: 40px;
-    font-size: var(--desktop-lead-text);
-    border-radius: 10px;
+  width: 200px;
+  height: 40px;
+  font-size: var(--desktop-lead-text);
+  border-radius: 10px;
 }
 
 .button.small {
-    width: 80px;
-    height: 30px;
-    font-size: var(--desktop-paragraph-text);
-    border-radius: 6px;
+  width: 80px;
+  height: 30px;
+  font-size: var(--desktop-paragraph-text);
+  border-radius: 6px;
 }
 
 .main-button {
-    color: white;
-    background-color: var(--accent);
-    font-size: var(--desktop-lead-text);
-    font-weight: 600;
-    font-family: var(--font-geist-sans);
-    border-color: var(--accent-light) var(--accent) var(--accent-dark);
+  color: white;
+  background-color: var(--accent);
+  font-size: var(--desktop-lead-text);
+  font-weight: 600;
+  font-family: var(--font-geist-sans);
+  border-color: var(--accent-light) var(--accent) var(--accent-dark);
 }
 
 .main-button:disabled {
-    cursor: default;
-    background-color: #cccccc;
-    color: #848484;
-    border-color: #cccccc;
+  cursor: default;
+  background-color: #cccccc;
+  color: #848484;
+  border-color: #cccccc;
 }
 
 .outlined-button {
-    color: var(--accent);
-    background-color: white;
-    font-size: var(--desktop-lead-text);
-    font-weight: 600;
-    font-family: var(--font-geist-sans);
-    border-color: var(--accent)
+  color: var(--accent);
+  background-color: white;
+  font-size: var(--desktop-lead-text);
+  font-weight: 600;
+  font-family: var(--font-geist-sans);
+  border-color: var(--accent);
 }
