--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  font-family: "Geist Mono", monospace;
+  font-family: 'Geist Mono', monospace;
   max-width: 100vw;
   overflow-x: hidden;
   padding-bottom: 60px;
@@ -41,7 +41,10 @@ h1 {
   color: var(--text);
 }
 
-h2, h3, h4, h5 {
+h2,
+h3,
+h4,
+h5 {
   font-weight: 700;
   color: var(--gray-text);
 }
