--- a/app/Components/CategoryIcon/CategoryIcon.module.css
+++ b/app/Components/CategoryIcon/CategoryIcon.module.css
@@ -2,14 +2,17 @@
   color: var(--accent);
 }
 
+.class-icon-selected {
+  color:white;
+}
+
 .category-icon-button {
-  height: 100%;
-  width: 100%;
+  height: 38px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 15%;
-  background-color: rgba(129, 100, 208, 0.11);
+  background-color: rgba(129, 100, 208, 0);
   cursor: pointer;
   transition: background-color 0.3s ease;
   box-shadow: var(--box-shadow);
