feat: Change font famility from geist to nunito

--- a/AuthComponents/SignUpForm/sign-up-form.css
+++ b/AuthComponents/SignUpForm/sign-up-form.css
@@ -6,7 +6,7 @@
   justify-content: center;
   color: var(--text);
   padding: 1rem;
-  font-family: var(--font-geist-sans);
+  font-family: var(--font-nunito);
 }
 
 .signup-card {
