--- a/app/Components/AddTransactionWidget/AddTransactionWidget.module.css
+++ b/app/Components/AddTransactionWidget/AddTransactionWidget.module.css
@@ -62,8 +62,10 @@
 
 .transaction-amount-input {
   width: 100%;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 0.25rem;
   font-size: var(--desktop-paragraph-text);
+  font-size: 24px;
+  font-weight: 600;
   border: none;
   border-radius: 6px;
   outline-color: transparent;
